--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -127,28 +127,12 @@
         </form>
         <button type='submit' class='btn btn-primary' id='add-btn'>Submit</button>
         
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    ...
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
-                </div>
-            </div>
-        </div>
+        <button type='button' class='btn btn-primary' id='friend'>See My New Friend</button>
+
 </div>
 
-
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script type="text/javascript">
 $('#add-btn').on('click', function(event){
@@ -168,17 +152,24 @@ $('#add-btn').on('click', function(event){
             $('#q10').val().trim(),
         ]
     }
+
     console.log(newFriend);
     $.post('/api', newFriend, function(){
         console.log('complete');
-    }).then(function(){
-        $.get('/api/newfriend', function(){
-                console.log('success');
-            });
     });
     
 })
 
+function display (res){
+    var html
+}
+
+$('#friend').on('click', function(event){
+    $.get('/api/newfriend', function(res, req){
+            console.log('success');
+            console.log(res);
+        });
+})
 
 </script>
 </body>
